--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen-api": "lex gen-api ./types/atmosphere ./lexicons/**/*.json"
+    "gen-api": "lex gen-api ./types/atmosphere ./lexicons/**/*.json",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
     "@atproto/api": "^0.13.11",
@@ -40,7 +43,7 @@
     "emoji-picker-react": "^4.12.0",
     "jwt-decode": "^4.0.0",
     "multiformats": "^13.3.1",
-    "next": "14.2.14",
+    "next": "^14.2.24",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
     "npm": "^10.9.0",
@@ -58,6 +61,7 @@
     "use-debounce": "^10.0.3"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.9",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
@@ -68,5 +72,6 @@
     "tailwindcss": "3.4.13",
     "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.6.2"
-  }
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
