--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
     "tailwindcss-animate": "^1.0.7",
     "tinyld": "^1.3.4",
     "use-clipboard-copy": "^0.2.0",
-    "use-debounce": "^10.0.3"
+    "use-debounce": "^10.0.3",
+    "wrangler": "^3.114.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.9",
-    "@cloudflare/wrangler": "^1.21.0",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
