--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
     "tinyld": "^1.3.4",
+    "tippy.js": "^6.3.7",
     "use-clipboard-copy": "^0.2.0",
     "use-debounce": "^10.0.3",
     "wrangler": "^3.114.0"
