--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "emoji-picker-react": "^4.12.0",
     "jwt-decode": "^4.0.0",
     "multiformats": "^13.3.1",
-    "next": "=14.2.24",
+    "next": "^15.2.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
     "npm": "^10.9.0",
